Fix Bio edit input box so it doesn't overlap with Recommendations. Refs #214.

--- a/framebuzz/static/framebuzz/profiles/sass/screen.scss
+++ b/framebuzz/static/framebuzz/profiles/sass/screen.scss
@@ -273,6 +273,8 @@ div.marketing-content {
                             div.recommendations {
                                 height: 500px;
                                 margin: 36px 0;
+                                position: relative;
+                                z-index: 1;
 
                                 h2 {
                                     color: white;
